[project]
name = "reetkode"
version = "0.1.0"
description = "Collection of LeetCode solutions done in multiple languages, shared for learning and reference"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "mdutils>=1.6.0",
    "numpy>=2.2.5",
    "tabulate>=0.9.0",
]